--- a/client/src/components/tables/Table.module.css
+++ b/client/src/components/tables/Table.module.css
@@ -108,4 +108,8 @@ button.button {
         color: black;
         text-align: left;
     }
+
+    .opgaveHeader ul {
+        max-width: 100%; /* This value accomodates for the missing button in the OpgaveBody on mobile devices */ 
+    }
 }
